5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1595_2895.log
== TEST (2019-04-02 15:20:33) 
-- CODE:
q = int(input("q:"))
v = int(input("v:")
f = int(input("f"))
jogos = q + v + f
		 
-- ERROR:
File "XXXX", line 3
    f = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:20:54) 
-- CODE:
q = int(input("q:"))
v = int(input("v:")
f = int(input("f:"))
jogos = q + v + f
		 
-- ERROR:
File "XXXX", line 3
    f = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:21:07) 
-- CODE:
q = int(input("q:"))
v = int(input("v:"))
f = int(input("f:"))
jogos = q + v + f

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:22:00) 
-- CODE:
q = int(input("q:"))
v = int(input("v:"))
f = int(input("f:"))
jogos = q + v + f
print(jogos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:22:01) 
-- CODE:
q = int(input("q:"))
v = int(input("v:"))
f = int(input("f:"))
jogos = q + v + f
print(jogos)
-- EXECUTION TIME:
0.117696
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    v = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:22:01) 
-- CODE:
q = int(input("q:"))
v = int(input("v:"))
f = int(input("f:"))
jogos = q + v + f
print(jogos)
-- EXECUTION TIME:
0.117652
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    v = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:22:16) 
-- CODE:
q = int(input("q:"))
v = int(input("v:"))
f = int(input("f:"))
jogos = q + v + f
print(jogos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:22:16) 
-- CODE:
q = int(input("q:"))
v = int(input("v:"))
f = int(input("f:"))
jogos = q + v + f
print(jogos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:22:16) 
-- CODE:
q = int(input("q:"))
v = int(input("v:"))
f = int(input("f:"))
jogos = q + v + f
print(jogos)
-- EXECUTION TIME:
0.127011
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    v = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:22:27) 
-- CODE:
q = int(input("q:"))
v = int(input("v:"))
f = int(input("f:"))
jogos = q + v + f
print(jogos)
-- EXECUTION TIME:
0.196728
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    v = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:23:09) 
-- CODE:
q = int(input("q:"))
v = int(input("v:"))
f = int(input("f:"))
jogos = q*v + f
print(jogos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:23:18) 
-- CODE:
q = int(input("q:"))
v = int(input("v:"))
f = int(input("f:"))
jogos = q*v + f
print(jogos)
-- EXECUTION TIME:
0.1423
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    v = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:24:18) 
-- CODE:
q = int(input("q:"))
v = float(input("v:"))
f = float(input("f:"))
jogos = q*v + f
print(jogos)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:24:44) 
-- CODE:
q = int(input("q:"))
v = float(input("v:"))
f = float(input("f:"))
jogos = q*v + f
print(jogos)
-- EXECUTION TIME:
0.276601
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
